# SSepOptim

./: .gitignore  LICENSE  README.md  download_dataset.py  install_extensions.sh  main.py  pyproject.toml
config/: default.ini
ssepoptim/: dataset.py  loss.py  losses.py  main.py  metric.py  metrics.py  model.py  optimization.py  training.py  training_inference.py
ssepoptim/base/: checkpointing.py  configuration.py  factory.py
ssepoptim/datasets/: Aishell1Mix.py  LibriCSS.py  LibriMix.py  WHAM.py
ssepoptim/datasets/utils/: audio_files_dataset.py  cache_data.py  csv_dataset.py  gdrive_download.py  split_data.py
ssepoptim/extensions/: setup.py  unique_argmin.py
ssepoptim/extensions/unique_argmin/: setup.py  unique_argmin.cpp  unique_argmin_cuda_kernel.cu
ssepoptim/libs/: asteroid.py  asteroid_filterbanks.py  speechbrain.py
ssepoptim/metrics/: base.py  pit.py  sdr.py
ssepoptim/models/: convtasnet.py  dptnet.py  lstmtasnet.py  sepformer.py  test_model.py
ssepoptim/optimizations/: __init__.py  huffman_coding.py  low_rank_factorization.py  pruning.py  quantization.py
ssepoptim/optimizations/helpers/: module_run.py
ssepoptim/optimizations/low_rank_factorization_impl/: base.py  cp.py  cp_conv.py  tucker.py  tucker_conv.py  vbmf.py
ssepoptim/optimizations/pruning_impl/: weight_change_pruning.py
ssepoptim/tests/: test_checkpointer.py  test_configuration.py
ssepoptim/training/: base.py  early_stop.py  training_loop.py  training_observer.py
ssepoptim/utils/: aggregation.py  chaining.py  config_builder.py  context_helper.py  context_timer.py  conversion.py  distributed.py  importing.py  io.py  model_stats.py  model_transforming.py  module_stats.py  module_transforming.py  tensor_ops.py  torch_utils.py  type_checker.py
tests/: test_checkpointer.py  test_configuration.py
(+5 files in other folders)
